--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,25 @@ sudo: true
 language: php
 
 php:
-  - 5.3.3
+  #- 5.3.3
   - 5.4
   - 5.5
+
+matrix:
+  include:
+    - php: "5.3.3"
+      dist: precise
+      env: FEDORA_VERSION="3.5"
+    - php: "5.3.3"
+      dist: precise
+      env: FEDORA_VERSION="3.6.2"
+    - php: "5.3.3"
+      dist: precise
+      env: FEDORA_VERSION="3.7.0"
+    - php: "5.3.3"
+      dist: precise
+      env: FEDORA_VERSION="3.8.1"  
+  
 
 branches:
   only:
@@ -57,6 +73,3 @@ script:
   - drush coder-review --reviews=production,security,style,i18n,potx,sniffer islandora_basic_oralhistories
   - phpcpd --names *.module,*.inc,*.test sites/all/modules/islandora_solution_pack_oralhistories
   - drush test-run --uri=http://localhost:8081 "Islandora Oralhistories"
-
-notifications:
-  irc: "irc.freenode.org#islandora"
